--- a/index.html
+++ b/index.html
@@ -4,47 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="assets/calango.ico">
+    <link rel="icon" href="assets/calango.ico" />
     <title>Calangos da Peste - Início</title>
   </head>
   <body>
     <div class="header">
       <div class="header-left">
-        <br>
+        <br />
         <a href="index.html" class="header-title">Calangos da Peste</a>
-        <div>
-
-        </div>
+        <div></div>
       </div>
-      <div class="header-right">
-        
-      </div>
+      <div class="header-right"></div>
     </div>
 
     <div class="grid-container">
       <div class="item1">
         <a class="a-h1" href="introducao.html">
-        <img src="assets/caatinga.jpg" />
-        UM POUCO SOBRE A CAATINGA</a>
-        <p class="a-p">Caatinga é o único bioma exclusivamente brasileiro. É marcada pela ocorrência do clima Semiárido, quente e seco, e também por espécies endêmicas altamente adaptadas à seca.</p >
+          <img src="assets/caatinga.jpg" />
+          UM POUCO SOBRE A CAATINGA</a
+        >
+        <p class="a-p">
+          Caatinga é o único bioma exclusivamente brasileiro. É marcada pela
+          ocorrência do clima Semiárido, quente e seco, e também por espécies
+          endêmicas altamente adaptadas à seca.
+        </p>
       </div>
       <div class="item2">
         <a class="a-h1" href="fauna.html">
-        <img src="assets/Sapo-cururu-capa.png" />
-        FAUNA & DESERTIFICAÇÃO</a>
-        <p class="a-p">A fauna da Caatinga é bastante diversificada, mas não tão conhecida, havendo diversas espécies de animais endêmicos. Os animais que se encontram na região abrangida por...</p>
+          <img src="assets/Sapo-cururu-capa.png" />
+          FAUNA & DESERTIFICAÇÃO</a
+        >
+        <p class="a-p">
+          A fauna da Caatinga é bastante diversificada, mas não tão conhecida,
+          havendo diversas espécies de animais endêmicos. Os animais que se
+          encontram na região abrangida por...
+        </p>
       </div>
       <div class="item3">
         <a class="a-h1" href="desafios.html">
-        <img src="assets/dessertificacao.webp" />
-        DESAFIOS</a>
-        <p class="a-p">Caatinga, único bioma exclusivamente brasileiro, enfrenta uma série de ameaças que comprometem sua biodiversidade e a qualidade de vida das cerca de 30 milhões de pesso...</p>
+          <img src="assets/dessertificacao.webp" />
+          DESAFIOS</a
+        >
+        <p class="a-p">
+          Caatinga, único bioma exclusivamente brasileiro, enfrenta uma série de
+          ameaças que comprometem sua biodiversidade e a qualidade de vida das
+          cerca de 30 milhões de pesso...
+        </p>
       </div>
       <div class="item4">
         <a class="a-h1" href="curiosidades.html">
-        <img src="assets/Curiosidades.jpeg" />
-        CURIOSIDADES</a>
-        <p class="a-p">Caatinga é o único bioma exclusivamente brasileiro. É marcada pela ocorrência do clima Semiárido, quente e seco, e também por espécies endêmicas altamente adaptadas à seca.</p>
+          <img src="assets/Curiosidades.jpeg" />
+          CURIOSIDADES</a
+        >
+        <p class="a-p">
+          Caatinga é o único bioma exclusivamente br asileiro. É marcada pela
+          ocorrência do clima Semiárido, quente e seco, e também por espécies
+          endêmicas altamente adaptadas à seca.
+        </p>
+      </div>
+      <div class="item4">
+        <a class="a-h1" href="memes.html">
+          <img src="assets/malassombro.png" />
+          MEMES DA CAATINGA</a
+        >
+        <p class="a-p">
+          Caia na gargalhada com os melhores memes da Caatinga que os Calangos
+          da Peste conseguiram encontrar. Divirta-se!
+        </p>
+      </div>
+    </div>
+
+    <div class="footer">
+      <h1>Autores</h1>
+      <div class="footer-authors">
+        <ul>
+          <li>Guilherme Jucá</li>
+          <li>João Vitor</li>
+          <li>Juan Pedro</li>
+          <li>Kauan Lucas</li>
+          <li>Lara Rita</li>
+          <li>Pedro Levi</li>
+        </ul>
       </div>
     </div>
   </body>
