--- a/introducao.html
+++ b/introducao.html
@@ -9,21 +9,15 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-left">
-        <br>
+      <br>
+      <br>
+      <br>
         <a href="index.html" class="header-title">Calangos da Peste</a>
-        <div>
-
-        </div>
-      </div>
-      <div class="header-right">
-        
-      </div>
     </div>
 
     <div class="content">
       <div class="content-title">
-        <img src="assets/Untitled155.png">
+        <img>
       </div>
 
       <div class="content-main">
@@ -153,5 +147,8 @@
           <p class="a-p">Caatinga é o único bioma exclusivamente brasileiro. É marcada pela ocorrência do clima Semiárido, quente e seco, e também por espécies endêmicas altamente adaptadas à seca.</p></div>
       </div>
     </div>
+
+    <script src="jquery.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
