--- a/curiosidades.html
+++ b/curiosidades.html
@@ -9,21 +9,15 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-left">
-        <br>
+      <br>
+      <br>
+      <br>
         <a href="index.html" class="header-title">Calangos da Peste</a>
-        <div>
-
-        </div>
-      </div>
-      <div class="header-right">
-        
-      </div>
     </div>
 
     <div class="content">
       <div class="content-title">
-        <img src="assets/Untitled155.png">
+        <img>
       </div>
       <div class="content-main">
         <h1>CURIOSIDADES</h1>
