--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/calango.ico" />
+    <script src="script.js"></script>
     <title>Calangos da Peste - Início</title>
   </head>
   <body>
-    <div class="header">
-      <br>
-      <br>
-      <br>
-        <a href="index.html" class="header-title">Calangos da Peste</a>
-    </div>
+    <div w3-include-html="header.html"></div>
 
     <div class="grid-container">
       <div class="item1">
@@ -85,5 +81,8 @@
         </ul>
       </div>
     </div>
+    <script>
+      includeHTML();
+    </script>
   </body>
 </html>
