--- a/memes.html
+++ b/memes.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/calango.ico" />
+    <script src="script.js"></script>
     <title>Calangos da Peste - Curiosidades</title>
   </head>
   <body>
-    <div class="header">
-      <br>
-      <br>
-      <br>
-        <a href="index.html" class="header-title">Calangos da Peste</a>
-    </div>
+    <div w3-include-html="header.html"></div>
 
     <div class="content">
       <div class="content-title">
@@ -29,6 +25,7 @@
       </div>
 
       <div class="content-posts">
+        <h1>VEJA MAIS EM:</h1>
         <div>
           <a class="a-h1" href="introducao.html">
             <img src="assets/caatinga.jpg" />
@@ -64,5 +61,9 @@
         </div>
       </div>
     </div>
+
+    <script>
+      includeHTML();
+    </script>
   </body>
 </html>
