--- a/introducao.html
+++ b/introducao.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/calango.ico">
+    <script src="script.js"></script>
     <title>Calangos da Peste - Um Pouco Sobre a Caatinga</title>
   </head>
   <body>
-    <div class="header">
-      <br>
-      <br>
-      <br>
-        <a href="index.html" class="header-title">Calangos da Peste</a>
-    </div>
+    <div w3-include-html="header.html"></div>
 
     <div class="content">
       <div class="content-title">
@@ -133,6 +129,7 @@
       </div>
 
       <div class="content-posts">
+        <h1>VEJA MAIS EM:</h1>
         <div><a class="a-h1" href="fauna.html">
           <img src="assets/Sapo-cururu-capa.png" />
           FAUNA & DESERTIFICAÇÃO</a>
@@ -147,8 +144,8 @@
           <p class="a-p">Caatinga é o único bioma exclusivamente brasileiro. É marcada pela ocorrência do clima Semiárido, quente e seco, e também por espécies endêmicas altamente adaptadas à seca.</p></div>
       </div>
     </div>
-
-    <script src="jquery.js"></script>
-    <script src="scripts.js"></script>
+    <script>
+      includeHTML();
+    </script>
   </body>
 </html>
