--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div class="header">
     <div class="header-title">
-      <a href=".." class="header-title">Calangos da Peste</a>
+      <a href="../calangos" class="header-title">Calangos da Peste</a>
     </div>
   </div>
